--- a/index.Rmd
+++ b/index.Rmd
@@ -72,7 +72,19 @@ college_towns <- c("Bloomington, MN", "Minneapolis, MN", "Bemidji, MN",  "Mankat
                   
                   "Albuquerque, NM", "Portales, NM", "Santa Fe, NM", "Crownpoint, NM", "Las Vegas, NM", "Socorro, NM", "Las Cruces, NM", "Espanola, NM", "Hobbs, NM", "Silver City, NM",
                   
-                  "Garden City, NY", "Albany, NY", "Alfred, NY", "New York, NY", "New York City, New York", "Brooklyn, NY", "Monsey, NY", "Annandale-On-Hudson, NY", "Spring Valley, NY", "Far Rockaway, NY", "Vestal, NY", "Buffalo, NY", "Rochester, NY", "Orchard Park, NY", "Liverpool, NY", "Cazenovia, NY", "Potsdam, NY", "Hamilton, NY", "Bronx, NY", "Staten Island, NY", "Bronxville, NY", "Ithaca, NY", "Hyde Park, NY", "Queens, NY", "Jamaica, NY", "Amherst, NY", "Johnson City, NY", "Orangeburg, NY", "Elmira, NY", "Farmingdale, NY", "Dix Hills, NY", "Clinton, NY", "Oneonta, NY", "Hamburg, NY", "Geneva, NY", "Hempstead, NY", "Houghton, NY", "New Rochelle, NY", "Jamestown, NY", "Ossining, NY", "Keuka Park, NY", "Syracuse, NY", "Brookville, NY", "Riverdale, NY", "Purchase, NY", "Poughkeepsie, NY", "Dobbs Ferry, NY", "Rockville Centre, NY", "Newburgh, NY", "Syosset, NY", "Mineola, NY"," Old Westbury, NY", "Niagara University, NY", "Peekskill, NY", "Paul Smiths, NY", "Forest Hills, NY", "Long Beach, NY", "Flushing, NY", "Troy, NY", "Lawrence, NY", "Loudonville, NY", "Saratoga Springs, NY", "St. Bonaventure, NY", "Saint Bonaventure, NY", "Brooklyn Heights, NY", "Canton, NY", "Patchogue, NY", "Sparkill, NY", "New Paltz, NY", "Stony Brook, NY", "Fredonia, NY", "Brockport, NY", "Geneseo, NY", "Oswego, NY", "Plattsburgh, NY", "Potsdam, NY", "Cobleskill, NY", "Delhi, NY", "Cortland, NY", "Throggs Neck, NY", "Morrisville, NY", "Utica, NY", "White Plains, NY", "Schenectady, NY", "Kings Point, NY", "West Point, NY", "Glen Cove, NY", "Aurora, NY", "Mount Kisco, NY", "Greenfield Park, NY", "New Windsor, NY", "Kew Gardens, NY", "Suffern, NY", "Monroe, NY", "South Fallsburg, NY")
+                  "Garden City, NY", "Albany, NY", "Alfred, NY", "New York, NY", "New York City, New York", "Brooklyn, NY", "Monsey, NY", "Annandale-On-Hudson, NY", "Spring Valley, NY", "Far Rockaway, NY", "Vestal, NY", "Buffalo, NY", "Rochester, NY", "Orchard Park, NY", "Liverpool, NY", "Cazenovia, NY", "Potsdam, NY", "Hamilton, NY", "Bronx, NY", "Staten Island, NY", "Bronxville, NY", "Ithaca, NY", "Hyde Park, NY", "Queens, NY", "Jamaica, NY", "Amherst, NY", "Johnson City, NY", "Orangeburg, NY", "Elmira, NY", "Farmingdale, NY", "Dix Hills, NY", "Clinton, NY", "Oneonta, NY", "Hamburg, NY", "Geneva, NY", "Hempstead, NY", "Houghton, NY", "New Rochelle, NY", "Jamestown, NY", "Ossining, NY", "Keuka Park, NY", "Syracuse, NY", "Brookville, NY", "Riverdale, NY", "Purchase, NY", "Poughkeepsie, NY", "Dobbs Ferry, NY", "Rockville Centre, NY", "Newburgh, NY", "Syosset, NY", "Mineola, NY"," Old Westbury, NY", "Niagara University, NY", "Peekskill, NY", "Paul Smiths, NY", "Forest Hills, NY", "Long Beach, NY", "Flushing, NY", "Troy, NY", "Lawrence, NY", "Loudonville, NY", "Saratoga Springs, NY", "St. Bonaventure, NY", "Saint Bonaventure, NY", "Brooklyn Heights, NY", "Canton, NY", "Patchogue, NY", "Sparkill, NY", "New Paltz, NY", "Stony Brook, NY", "Fredonia, NY", "Brockport, NY", "Geneseo, NY", "Oswego, NY", "Plattsburgh, NY", "Potsdam, NY", "Cobleskill, NY", "Delhi, NY", "Cortland, NY", "Throggs Neck, NY", "Morrisville, NY", "Utica, NY", "White Plains, NY", "Schenectady, NY", "Kings Point, NY", "West Point, NY", "Glen Cove, NY", "Aurora, NY", "Mount Kisco, NY", "Greenfield Park, NY", "New Windsor, NY", "Kew Gardens, NY", "Suffern, NY", "Monroe, NY", "South Fallsburg, NY",
+                  
+                  "Durham, NC", "Boone, NC", "Wilson, NC", "Belmont, NC", "Greensboro, NC", "Brevard, NC", "Concord, NC", "Buies Creek, NC", "Winston Salem, NC", "Fayetteville, NC", "Charlotte, NC", "Salisbury, NC", "Murfreesboro, NC", "Davidson, NC", "Greenville, NC", "Elizabeth City, NC", "Elon, NC", "Boiling Springs, NC", "Dunn, NC", "High Point, NC", "Banner Elk, NC", "Raleigh, NC", "Hickory, NC", "Salisbury, NC", "Mars Hill, NC", "Montreat, NC", "Rocky Mount, NC", "Misenheimer, NC", "Winston-Salem, NC", "Wilmington, NC", "Wake Forest, NC", "Wendell, NC", "Laurinburg, NC", "Morrisville, NC", "Mount Olive, NC", "Asheville, NC", "Chapel Hill, NC", "Pembroke, NC", "Henderson, NC", "Swannanoa, NC", "Cullowhee, NC", "Wingate, NC",
+                  
+                  "Bismarck, ND", "Dickinson, ND", "Mayville, ND", "Minot, ND", "Fargo, ND", "New Town, ND", "Fort Yates, ND", "Ellendale, ND", "Belcourt, ND", "Jamestown, ND", "Grand Forks, ND", "Valley City, ND",
+                  
+                  "Salem, OH", "Yellow Springs, OH", "Cincinnati, OH", "Ashland, OH", "Canton, OH", "Berea, OH", "Bluffton, OH", "Huron, OH", "Bowling Green, OH", "Parma, OH", "Columbus, OH", "Cleveland, OH", "Cedarville, OH", "Wilberforce, OH", "Springfield, OH", "Defiance, OH", "Granville, OH", "Steubenville, OH", "Tiffin, OH", "Akron, OH", "Hiram, OH", "Westerville, OH", "University Heights, OH", "Ashtabula, OH", "East Liverpool, OH", "Burton, OH", "Kent, OH", "Warren, OH", "New Philadelphia, OH", "Gambier, OH", "Kettering, OH", "Painesville, OH", "Elyria, OH", "Sylvania, OH", "Marietta, OH", "Toledo, OH", "Hamilton, OH", "Middletown, OH", "Oxford, OH", "Mount Vernon, OH", "New Concord, OH", "Mansfield, OH", "Oberlin, OH", "Circleville, OH", "Ada, OH", "Lima, OH", "Marion, OH", "Newark, OH", "Chillicothe, OH", "Saint Clairesville, OH", "St. Clairesville, OH", "Lancaster, OH", "Athens, OH", "Ironton, OH", "Zanesville, OH", "Delaware, OH", "Wickliffe, OH", "Portsmouth, OH", "Dayton, OH", "Warrensville Heights, OH", "Wooster, OH", "Lakewood, OH", "Findlay, OH", "South Point, OH", "Blue Ash, OH", "Batavia, OH", "Dayton, OH", "Alliance, OH", "Rio Grande, OH", "Pepper Pike, OH", "North Canton, OH", "Wilmington, OH", "Celina, OH", "Youngstown, OH",
+                  
+                  "Muskogee, OK", "Lawton, OK", "Ada, OK", "Shawnee, OK", "Langston, OK", "Oklahoma City, OK", "Tulsa, OK", "Tahlequah, OK", "Alva, OK", "Edmond, OK", "Goodwell, OK", "Okmulgee, OK", "Stillwater, OK", "Bartlesville, OK", "Moore, OK", "Claremore, OK", "Durant, OK", "Bethany, OK", "Weatherford, OK", "Norman, OK", "Chickasha, OK",
+                  
+                  "Portland, OR", "Salem, OR", "La Grande, OR", "Newburg, OR", "McMinnville, OR", "Saint Benedict, OR", "St. Benedict, OR", "Eugene, OR", "Klamath Falls, OR", "Corvallis, OR", "Bend, OR", "Forest Grove, OR", "Beaverton, OR", "Ashland, OR", "Monmouth, OR",
+                  
+                  "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Langhorne, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "Williamsport, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "York, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA")
 
 
 ```
